--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -22,8 +22,9 @@
 	float: left;
 	clear: both;
 	width: 100%;
+	margin: 0px;
 	max-width: 500px;
-	padding: 5px 0px;	
+	padding: 5px 0px;
 }
 .rbform.form-admin .rbfield {
 	max-width: 100%;
